grammar.js
		document: $ => seq(
			repeat(
				choice(
					$.comment,
					$.import_header,
				),
			),
			choice(
				$.page_header,
				$.taglib_header,
			),
			repeat(
				seq(
					optional($.comment),
					choice(
						$.import_header,
						$.page_header,
						$.taglib_header,
					),
				),
			),
			repeat($._top_level_tag),
		),

		_top_level_tag: $ => choice(
			$._top_level_sp_tag,
			$.comment,
			$.html_doctype,
			// TODO: prec doesn't work here
			prec(3, $.html_void_tag),
			prec(2, $.html_tag),
			prec(1, $.html_option_tag),
			$.java_tag,
			$.script_tag,
			$.style_tag,
			$.xml_comment,
			$.xml_entity,
		),

		page_header: $ => seq(
			$.header_open,
			'page',
			$.language_attribute,
			$.pageEncoding_attribute,
			$.contentType_attribute,
			$.header_close,
		),

		taglib_header: $ => seq(
			$.header_open,
			'taglib',
			choice(
				$.uri_attribute,
				$.tagdir_attribute,
			),
			$.prefix_attribute,
			$.header_close,
		),

		header_open: $ => '<%@',
		header_close: $ => '%>',

		// sp tags

		self_closing_tag_end: $ => '/>',

		// spt tags

		spt_date_tag: $ => seq(
			$.spt_date_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.disabled_attribute,
					$.fixvalue_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.nowButton_attribute,
					$.placeholder_attribute,
					$.readonly_attribute,
					$.size_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_date_tag_open: $ => '<spt:date',

		spt_encryptemail_tag: $ => seq(
			$.spt_encryptemail_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.form_attribute,
					$.name_attribute,
					$.object_attribute,
					$.popupheight_attribute,
					$.popupwidth_attribute,
					$.urlparam_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_encryptemail_tag_open: $ => '<spt:encryptemail',

		spt_formsolutions_tag: $ => seq(
			$.spt_formsolutions_tag_open,
			repeat(
				choice(
					$.name_attribute,
					$.locale_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_formsolutions_tag_open: $ => '<spt:formsolutions',

		spt_ilink_tag: $ => seq(
			$.spt_ilink_tag_open,
			repeat(
				choice(
					$.action_attribute,
					$.information_attribute,
					$.step_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_ilink_tag_open: $ => '<spt:ilink',

		spt_imageeditor_tag: $ => seq(
			$.spt_imageeditor_tag_open,
			repeat(
				choice(
					$.delete_attribute,
					$.focalpoint_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.object_attribute,
					$.width_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_imageeditor_tag_open: $ => '<spt:imageeditor',

		spt_imp_tag: $ => seq(
			$.spt_imp_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.alt_attribute,
					$.background_attribute,
					$.color_attribute,
					$.excerpt_attribute,
					$.font_attribute,
					$.font_size_attribute,
					$.font_weight_attribute,
					$.fontcolor_attribute,
					$.fontname_attribute,
					$.fontsize_attribute,
					$.fontweight_attribute,
					$.format_attribute,
					$.gravity_attribute,
					$.height_attribute,
					$.image_attribute,
					$.manipulate_attribute,
					$.offset_attribute,
					$.padding_attribute,
					$.paddingcolor_attribute,
					$.scalesteps_attribute,
					$.text_attribute,
					$.text_transform_attribute,
					$.transform_attribute,
					$.urlonly_attribute,
					$.width_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_imp_tag_open: $ => '<spt:imp',

		spt_link_tag: $ => seq(
			$.spt_link_tag_open,
			repeat(
				choice(
					$.filter_attribute,
					$.filterattribute_attribute,
					$.filteric_attribute,
					$.filterinvert_attribute,
					$.filtermode_attribute,
					$.filterquery_attribute,
					$.fixvalue_attribute,
					$.height_attribute,
					$.hidden_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.pools_attribute,
					$.previewimage_attribute,
					$.showtree_attribute,
					$.size_attribute,
					$.type_attribute,
					$.value_attribute,
					$.width_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_link_tag_open: $ => '<spt:link',

		spt_number_tag: $ => seq(
			$.spt_number_tag_open,
			repeat(
				choice(
					$.align_attribute,
					$.disabled_attribute,
					$.fixvalue_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.readonly_attribute,
					$.size_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_number_tag_open: $ => '<spt:number',

		spt_personalization_tag: $ => seq(
			$.spt_personalization_tag_open,
			repeat(
				choice(
					$.information_attribute,
					$.mode_attribute,
					$.name_attribute,
					$.publisher_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_personalization_tag_open: $ => '<spt:personalization',

		spt_prehtml_tag: $ => seq(
			$.spt_prehtml_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.name_attribute,
					$.object_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_prehtml_tag_open: $ => '<spt:prehtml',

		spt_smarteditor_tag: $ => seq(
			$.spt_smarteditor_tag_open,
			repeat(
				choice(
					$.cols_attribute,
					$.hide_attribute,
					$.name_attribute,
					$.options_attribute,
					$.rows_attribute,
					$.textlabel_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_smarteditor_tag_open: $ => '<spt:smarteditor',

		spt_spml_tag: $ => seq(
			$.spt_spml_tag_open,
			repeat($.api_attribute),
			$.self_closing_tag_end,
		),
		spt_spml_tag_open: $ => '<spt:spml',

		spt_text_tag: $ => seq(
			$.spt_text_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.disabled_attribute,
					$.editablePlaceholder_attribute,
					$.fixvalue_attribute,
					$.format_attribute,
					$.hyphenEditor_attribute,
					$.inputType_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.readonly_attribute,
					$.size_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_text_tag_open: $ => '<spt:text',

		spt_textarea_tag: $ => seq(
			$.spt_textarea_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.disabled_attribute,
					$.editablePlaceholder_attribute,
					$.fixvalue_attribute,
					$.hyphenEditor_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.readonly_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_textarea_tag_open: $ => '<spt:textarea',

		spt_timestamp_tag: $ => seq(
			$.spt_timestamp_tag_open,
			repeat($.connect_attribute),
			$.self_closing_tag_end,
		),
		spt_timestamp_tag_open: $ => '<spt:timestamp',

		spt_tinymce_tag: $ => seq(
			$.spt_tinymce_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.cols_attribute,
					$.config_attribute,
					$.configextension_attribute,
					$.configvalues_attribute,
					$.disabled_attribute,
					$.fixvalue_attribute,
					$.name_attribute,
					$.pools_attribute,
					$.readonly_attribute,
					$.rows_attribute,
					$.theme_attribute,
					$.toggle_attribute,
					$.type_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_tinymce_tag_open: $ => '<spt:tinymce',

		spt_updown_tag: $ => seq(
			$.spt_updown_tag_open,
			repeat(
				choice(
					$.from_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.to_attribute,
					$.value_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_updown_tag_open: $ => '<spt:updown',

		connect_attribute: $ => seq(
			'connect',
			'=',
			$.string,
		),

		contentType_attribute: $ => seq(
			'contentType',
			'=',
			$.string,
		),

		height_attribute: $ => seq(
			'height',
			'=',
			$.string,
		),

		image_attribute: $ => seq(
			'image',
			'=',
			$.string,
		),

		language_attribute: $ => seq(
			'language',
			'=',
			$.string,
		),

		name_attribute: $ => seq(
			'name',
			'=',
			$.object_string,
		),

		object_attribute: $ => seq(
			'object',
			'=',
			$.object_string,
		),

		pageEncoding_attribute: $ => seq(
			'pageEncoding',
			'=',
			$.string,
		),

		prefix_attribute: $ => seq(
			'prefix',
			'=',
			$.string,
		),

		uri_attribute: $ => seq(
			'uri',
			'=',
			$.string,
		),

		width_attribute: $ => seq(
			'width',
			'=',
			$.string,
		),

		string: $ => seq(
			'"',
			repeat(
				choice(
					/[^"$!\}]+/,
					prec(1, $.interpolated_string),
					prec(2, $.interpolated_anchor),
					prec(3, '$'),
					prec(4, '!'),
				),
			),
			'"',
		),
