test/corpus/spt_imp.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<spt:imp image="sp_image" height="200" width="300"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (spt_imp_tag
    (spt_imp_tag_open)
    (image_attribute
      (string
        (string_content)))
    (height_attribute
      (string
        (string_content)))
    (width_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
